--- a/ejb-ibank-app/ibank-app-web/src/main/webapp/WEB-INF/web.xml
+++ b/ejb-ibank-app/ibank-app-web/src/main/webapp/WEB-INF/web.xml
@@ -1,5 +1,52 @@
-<web-app xmlns="http://java.sun.com/xml/ns/javaee"
-         xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
-         xsi:schemaLocation="http://java.sun.com/xml/ns/javaee http://java.sun.com/xml/ns/javaee/web-app_3_0.xsd"
-         version="3.0">
+<?xml version="1.0" encoding="UTF-8"?>
+<web-app version="3.0" xmlns="http://java.sun.com/xml/ns/javaee" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://java.sun.com/xml/ns/javaee http://java.sun.com/xml/ns/javaee/web-app_3_0.xsd">
+    <display-name>ibank</display-name>
+    <context-param>
+        <description>Context url</description>
+        <param-name>simplurl</param-name>
+        <param-value>/ibank</param-value>
+    </context-param>
+    <context-param>
+        <description>base url</description>
+        <param-name>url</param-name>
+        <param-value>/ibank/controller</param-value>
+    </context-param>
+    <context-param>
+        <description>Controller url</description>
+        <param-name>urlController</param-name>
+        <param-value>/controller</param-value>
+    </context-param>
+    <filter>
+        <filter-name>Internationalization</filter-name>
+        <filter-class>com.company.ibank.views.filters.Internationalization</filter-class>
+    </filter>
+    <filter-mapping>
+        <filter-name>Internationalization</filter-name>
+        <url-pattern>/*</url-pattern>
+    </filter-mapping>
+    <servlet>
+        <description>Base Servlet</description>
+        <display-name>Controller</display-name>
+        <servlet-name>Controller</servlet-name>
+        <servlet-class>com.company.ibank.controllers.Controller</servlet-class>
+    </servlet>
+    <servlet-mapping>
+        <servlet-name>Controller</servlet-name>
+        <url-pattern>/controller</url-pattern>
+    </servlet-mapping>
+    <welcome-file-list>
+        <welcome-file>index.jsp</welcome-file>
+    </welcome-file-list>
+    <error-page>
+        <exception-type>java.io.IOException</exception-type>
+        <location>/error-505.html</location>
+    </error-page>
+    <error-page>
+        <error-code>404</error-code>
+        <location>/error-404.html</location>
+    </error-page>
+    <error-page>
+        <exception-type>java.lang.NullPointerException</exception-type>
+        <location>/error-404.html</location>
+    </error-page>
 </web-app>
